syntax = "proto3";

package com.lodny.rwcommon.grpc;

option java_package = "com.lodny.rwcommon.grpc.common";


message Empty {}


message GrpcIdRequest {
  int64 id = 1;
}

message GrpcIdResponse {
  int64 id = 1;
}

message GrpcIdListResponse {
  repeated int64 id = 1;
}

message GrpcArticleIdRequest {
  int64 articleId = 1;
}

message GrpcUsernameRequest {
  string username = 1;
}

message GrpcSlugRequest {
  string slug = 1;
}

message GrpcPageRequest {
  int32 offset = 1;
  int32 limit = 2;
}


